2010-01-07  Adam Barth  <abarth@webkit.org>

        Reviewed by Maciej Stachowiak.

        Don't print a redundant message when confirming a diff
        https://bugs.webkit.org/show_bug.cgi?id=33315

        Instead of saying "ERROR: User declined" we should just exit because
        the use knows they just declined!

        * Scripts/webkitpy/steps/confirmdiff.py:

2010-01-07  Adam Barth  <abarth@webkit.org>

        Reviewed by Maciej Stachowiak.

        Check style before uploading a patch
        https://bugs.webkit.org/show_bug.cgi?id=33314

        * Scripts/webkitpy/commands/upload.py:
        * Scripts/webkitpy/steps/checkstyle.py:
        * Scripts/webkitpy/steps/options.py:

2010-01-07  Adam Barth  <abarth@webkit.org>

        Reviewed by Maciej Stachowiak.

        Add prepare and post to webkit-patch main help
        https://bugs.webkit.org/show_bug.cgi?id=33313

        * Scripts/webkitpy/commands/upload.py:

2010-01-07  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Add Chromium bots to the list of "core builders" (builders which stop the commit-queue when they turn red)
        https://bugs.webkit.org/show_bug.cgi?id=33290

        Add the Chromium builders to our list of core builders and test that our regexps work.
        I also updated our regexp testing to make sure we cover all known builders at build.webkit.org.

        * Scripts/webkitpy/buildbot.py:
        * Scripts/webkitpy/buildbot_unittest.py:

2010-01-07  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        bugzilla-tool needs a new name
        https://bugs.webkit.org/show_bug.cgi?id=28459

        Rename bugzilla-tool to webkit-patch.  Also, rename some commands to
        make more sense with the new name.

        * Scripts/bugzilla-tool: Removed.
        * Scripts/webkit-patch: Added.
        * Scripts/webkit-tools-completion.sh:
        * Scripts/webkitpy/bugzilla_unittest.py:
        * Scripts/webkitpy/commands/download.py: