@@ -40,15 +40,13 @@ from webkitpy.commands.queries_unittest import *
 from webkitpy.commands.queues_unittest import *
 from webkitpy.committers_unittest import *
 from webkitpy.credentials_unittest import *
-from webkitpy.style.cpp_style_unittest import *
 from webkitpy.diff_parser_unittest import *
 from webkitpy.executive_unittest import *
 from webkitpy.multicommandtool_unittest import *
 from webkitpy.queueengine_unittest import *
 from webkitpy.steps.steps_unittest import *
 from webkitpy.steps.updatechangelogswithreview_unittests import *
-from webkitpy.style.checker_unittest import *
-from webkitpy.style.text_style_unittest import *
+from webkitpy.style.unittests import * # for check-webkit-style
 from webkitpy.webkit_logging_unittest import *
 from webkitpy.webkitport_unittest import *
 
